[package]
name = "test-framework"
version = "1.0.0"
authors = ["T-Force Xyz"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anchor-lang = "=0.25.0"
solana-program = "=1.10.41"

[dev-dependencies]
arrayref = "=0.3.6"
num_enum = "=0.5.4"
solana-cli-config = "=1.10.41"
solana-program-test = "=1.10.41"
solana-sdk = "=1.10.41"
tokio = "=1.14.1"
# dependency fix
proc-macro-crate = "=1.2.1"
time = "=0.3.15"
zstd-sys = "=2.0.4+zstd.1.5.2"

[features]
cpi = ["no-entrypoint"]
default = []
localhost = []
no-entrypoint = []
no-idl = []

[lib]
name = "test_framework"
crate-type = ["cdylib", "lib"]
