[package]
name = "test-framework"
version = "1.0.0"
authors = ["T-Force Xyz"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "test_framework"
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
default = []
localhost = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "=0.26.0"
solana-program = "=1.14.15"

[dev-dependencies]
arrayref = "=0.3.6"
num_enum = "=0.5.10"
solana-cli-config = "=1.14.15"
solana-program-test = "=1.14.15"
solana-sdk = "=1.14.15"
tokio = "=1.14.1"
# dependency fix
blake3 = "=1.3.3"
constant_time_eq = "=0.2.6"
dir-diff = "=0.3.2"
jobserver = "=0.1.25"
proc-macro-crate = "=1.2.1"
regex = "=1.9.6"
time = "=0.3.15"
zstd-sys = "=2.0.4+zstd.1.5.2"

[target.'cfg(macos)'.dev-dependencies]
security-framework = "=2.5.0"
security-framework-sys = "=2.5.0"
